--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: mysql
-  Namespace: expense
+  namespace: expense
   # this labels are deployment related labels
   labels:
     component: mysql
