--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -3,9 +3,9 @@ kind: ConfigMap
 metadata:
   name: backend
   namespace: expense
-data:
-  #DB_HOST: mysql # mysql component service name
-  DB_HOST: mysql 
+# data:
+#   #DB_HOST: mysql # mysql component service name
+#   DB_HOST: mysql 
 ---
 kind: Deployment
 apiVersion: apps/v1
