--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -1,29 +1,20 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: backend
-  namespace: expense
-# data:
-#   #DB_HOST: mysql # mysql component service name
-#   DB_HOST: mysql 
----
 kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: backend
   namespace: expense
-  # these labels are deployment related labels
+  # this labels are deployment related labels
   labels:
     component: backend
     project: expense
-    tier: app
+    tier: app  
 spec:
   replicas: 2
   selector:
     matchLabels:
       component: backend
       project: expense
-      tier: app
+      tier: app 
   # pod definition
   template:
     metadata:
@@ -31,10 +22,10 @@ spec:
         component: backend
         project: expense
         tier: app 
-      spec:
+    spec:
       containers:
-      - name: mysql
-        image: joindevops/backend:v1.0   
+      - name: backend
+        image: joindevops/backend:v1.0  
 ---
 apiVersion: v1
 kind: Service
@@ -49,4 +40,8 @@ spec:
   ports:
   - protocol: TCP
     port: 8080 #service-port
-    targetPort: 8080 #target-port        
+    targetPort: 8080 #target-port
+
+
+
+
