--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: backend
+  namespace: expense
+data:
+  #DB_HOST: mysql # mysql component service name
+  DB_HOST: mysql
+
+---
+
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -26,6 +37,9 @@ spec:
       containers:
       - name: backend
         image: joindevops/backend:v1.0  
+    envFrom:
+        - configMapRef:
+            name: backend    
 ---
 apiVersion: v1
 kind: Service
