--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -33,6 +33,7 @@ metadata:
   name: frontend
   namespace: expense
 spec:
+  type: LoadBalancer
   selector:
     component: frontend
     project: expense
@@ -40,7 +41,7 @@ spec:
   ports:
   - protocol: TCP
     port: 80 #service-port
-    targetPort: 8080 #target-port
+    targetPort: 80 #target-port
 
 
 
