--- a/backend/manifest.yaml
+++ b/backend/manifest.yaml
@@ -36,7 +36,14 @@ spec:
     spec:
       containers:
       - name: backend
-        image: joindevops/backend:v1.0  
+        image: joindevops/backend:v1.0
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "150m"
+            memory: "256Mi"
         envFrom:
           - configMapRef:
              name: backend    
