--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -97,25 +97,25 @@ apiVersion: apps/v1
 metadata:
   name: frontend
   namespace: expense
-  # this labels are deployment related labels
+  # these labels are deployment related labels
   labels:
     component: frontend
     project: expense
-    tier: app  
+    tier: web
 spec:
   replicas: 2
   selector:
     matchLabels:
       component: frontend
       project: expense
-      tier: app 
+      tier: web
   # pod definition
   template:
     metadata:
       labels:
         component: frontend
         project: expense
-        tier: app 
+        tier: web
     spec:
       containers:
       - name: frontend
@@ -128,18 +128,21 @@ spec:
             cpu: "150m"
             memory: "256Mi"
         volumeMounts:
-          - name: nginx-conf
-            mountPath: /etc/nginx/nginx.conf
-            subPath: nginx.conf
-            readOnly: true  
-
+        - name: nginx-conf
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+          readOnly: true
+        # envFrom:
+        # - configMapRef:
+        #     name: frontend
       volumes:
       - name: nginx-conf
         configMap:
           name: frontend
           items:
           - key: nginx.conf
-            path: nginx.conf   
+            path: nginx.conf
+
 ---
 apiVersion: v1
 kind: Service
@@ -147,11 +150,11 @@ metadata:
   name: frontend
   namespace: expense
 spec:
-  type: LoadBalancer
+  #type: LoadBalancer
   selector:
     component: frontend
     project: expense
-    tier: app
+    tier: web
   ports:
   - protocol: TCP
     port: 80 #service-port
@@ -167,7 +170,3 @@ spec:
     name: frontend # route traffic to the awesome-service
     port: 80
   targetGroupARN: arn:aws:elasticloadbalancing:us-east-1:202533543549:targetgroup/expense-dev-frontend/de60b747bd1fea82
-
-
-
-
